--- a/Homework/Banner/index.html
+++ b/Homework/Banner/index.html
@@ -35,7 +35,7 @@
         openText: '展開', // [string]
         class: 'btn' // [string]
       },
-      transition: false
+      transition: true
     });
 
     $('.wrap').on('click', function (e) {
