--- a/Homework/Banner/index.html
+++ b/Homework/Banner/index.html
@@ -29,13 +29,13 @@
     /* ==== start */
     $('.banner').banner({
       openAtStart: false,
-      autoToggle: true,
+      autoToggle: false,
       button: {
         closeText: '收合', // [string]
         openText: '展開', // [string]
         class: 'btn' // [string]
       },
-      transition: true
+      transition: false
     });
 
     $('.wrap').on('click', function (e) {
